dataset1235/2025-2/805158916/users/2584427029/executions/2118643220_2332513434.log
== SUBMISSION (2025-09-01 14:58:16)
-- CODE: 
valor_reais = float(int(input()))
valor_dolares = float(valor_reais*2,96)
valores_dolares = float (valor_dolares)
PRINT(valor_dolares)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:40:23)
-- CODE: 
Coroas = float(input("Digite o valore em coroas dinarmarquesas"))
reais = coroas*0.70
print("O valor em reais é R$:.2{f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:40:19)
-- CODE: 
coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
conversão = coroa dinarmarqusa  * 0.70

print(conversão)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:59:34)
-- CODE: 
valor_reais = float(int(input()))
valor_dolares = float(valor_reais*2,96)
valor_dolares = float(valor_dolares)
print(valor_dolares)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:42:36)
-- CODE: 
Coroas = float(input("Digite o valore em coroas dinarmarquesas"))
reais = coroas*0.70
print(f"O valor em reais é: R${reais:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:38:30)
-- CODE: 
coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
conversão = coroas dinarmarqusas  * 0.70

print(conversão)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:38:28)
-- CODE: 
coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
conversão = coroas dinarmarqusas  * 0.70

print(conversão)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:41:22)
-- CODE: 
Coroas = float(input("Digite o valore em coroas dinarmarquesas"))
reais = coroas*0.70
print("O valor em reais é: R${reais:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:42:13)
-- CODE: 
Coroas = float(input("Digite o valore em coroas dinarmarquesas"))
reais = coroas*0.70
print(F"O valor em reais é:R${reais:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:39:54)
-- CODE: 
coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
conversão = coroas dinarmarqusas  * 0.70

print(conversão)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:01:16)
-- CODE: 
valor_reais = float(int(input()))
valor_dolares = float(valor_reais*0,70)
valor_dolares = float(valor_dolares)
print(valor_dolares)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*0,70)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*0,70)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*0,70)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*0,70)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*0,70)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*0,70)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*0,70)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:42:24)
-- CODE: 
Coroas = float(input("Digite o valore em coroas dinarmarquesas"))
reais = coroas*0.70
print(f"O valor em reais é:R${reais:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:58:35)
-- CODE: 
valor_reais = float(int(input()))
valor_dolares = float(valor_reais*2,96)
valores_dolares = float (valor_dolares)
print(valor_dolares)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:59:32)
-- CODE: 
valor_reais = float(int(input()))
valor_dolares = float(valor_reais*2,96)
valor_dolares = float(valor_dolares)
print(valor_dolares)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:38:31)
-- CODE: 
coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
conversão = coroas dinarmarqusas  * 0.70

print(conversão)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:58:47)
-- CODE: 
valor_reais = float(int(input()))
valor_dolares = float(valor_reais*2,96)
valores_dolares = float(valor_dolares)
print(valor_dolares)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_dolares = float(valor_reais*2,96)
                    ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:39:55)
-- CODE: 
coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
conversão = coroas dinarmarqusas  * 0.70

print(conversão)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:41:12)
-- CODE: 
Coroas = float(input("Digite o valore em coroas dinarmarquesas"))
reais = coroas*0.70
print("O valor em reais é R${reais:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = coroas*0.70
            ^^^^^^
NameError: name 'coroas' is not defined. Did you mean: 'Coroas'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:40:48)
-- CODE: 
coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
conversão = coroas dinarmarqusas  * 0.70

print(conversão)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:39:56)
-- CODE: 
coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
conversão = coroas dinarmarqusas  * 0.70

print(conversão)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: "))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:40:03)
-- CODE: 
coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
conversão = coroas dinarmarqusas  * 0.70

print(conversão)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas:"))
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:37:53)
-- CODE: 
coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
conversão * coroas dinarmarqusas 0,70

print(conversão)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 1
    coroas dinarmarqusas = int(input("Quantidade de coroas dinarmaquesas: ")
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
